--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ gotham_serde_json_body_parser = "0.2.0"
 unicase = "2.0"
 structopt = "0.2.7"
 failure = "0.1.1"
+alto = "*"
+num = "*"
+itertools = "*"
+sndfile-sys = { path = "/home/fabian/projects/privat/sndfile-sys" }
