--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ serde_json = "1.0.13"
 serde_derive = "1.0.36"
 fmod = "0.10.1"
 rand = "0.5.0-pre.0"
-quick-error = "1.2.1"
+quick-error = "1.2.2"
 gotham = "0.2.1"
 hyper = "0.11"
 futures = "0.1"
@@ -22,4 +22,4 @@ failure = "0.1.1"
 alto = "*"
 num = "*"
 itertools = "*"
-sndfile-sys = { path = "/home/fabian/projects/privat/sndfile-sys" }
+sndfile-sys = { path = "../sndfile-sys" }
