Revamped error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ serde = "1.0.36"
 serde_json = "1.0.13"
 serde_derive = "1.0.36"
 rand = "0.5.0-pre.0"
-quick-error = "1.2.2"
 gotham = "0.2.1"
 hyper = "0.11"
 futures = "0.1"
@@ -21,4 +20,5 @@ failure = "0.1.1"
 alto = "*"
 num = "*"
 itertools = "*"
+#sndfile-sys = "*"
 sndfile-sys = { path = "../sndfile-sys" }
