--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sinfonia_server"
 version = "0.1.0"
 authors = ["Fabian Schlager <fabian.schlager@skyr.at>"]
+edition = '2018'
 
 [dependencies]
 log = "0.3.9"
@@ -10,10 +11,11 @@ serde = "1.0.36"
 serde_json = "1.0.13"
 serde_derive = "1.0.36"
 rand = "0.5.0-pre.0"
-gotham = "0.2.1"
-hyper = "0.11"
-futures = "0.1"
-gotham_serde_json_body_parser = "0.2.0"
+actix-web = "2.0.0-alpha.4"
+actix-rt = "1.0.0-alpha.3"
+actix-service = "1.0.0-alpha.4"
+actix-cors = "0.2.0-alpha.3"
+futures = "0.3.1"
 unicase = "2.0"
 structopt = "0.2.7"
 failure = "0.1.1"
